--- a/News.txt
+++ b/News.txt
@@ -5,7 +5,7 @@
  { 
  "gid": 2543829635484,
  "title": "Информация о сервере!",
- "url": "https://vk.com/desirerust133",
+ "url": "https://vk.com/winterrustdevblog",
  "is_external_url": true,
  "author": "Андрей Иванов",
  "информация": "[img]https://github.com/DeftSolutions-dev/serverrust/raw/main/BONK1.png[/img]
